# Nexus

./: .gitignore  README.md  pyproject.toml
benchmarks/: causal_discovery_bench.py
examples/: healthcare_demo.py
nexus/agents/: orchestrator.py
nexus/core/: causal_graph.py  conformal.py  ebitda_engine.py  temporal_fusion.py
nexus/llm/: client.py  prompts.py
nexus/verticals/healthcare/: or_optimizer.py  synthetic_data.py
tests/: test_causal_graph.py  test_ebitda_engine.py
