[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nexus-ebitda"
version = "0.1.0"
description = "Causal AI for enterprise EBITDA optimization"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Austin Tuttle", email = "austint98@gmail.com"}
]
keywords = ["causal-ai", "ebitda", "healthcare-ai", "graph-neural-network", "temporal-fusion-transformer", "multi-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.2.0",
    "numpy>=1.26",
    "pandas>=2.0",
    "scipy>=1.11",
    "anthropic>=0.40.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.3",
    "mypy>=1.8",
    "pre-commit>=3.6",
]
viz = [
    "matplotlib>=3.8",
    "networkx>=3.2",
    "plotly>=5.18",
]
notebooks = [
    "jupyter>=1.0",
    "ipywidgets>=8.0",
]

[project.scripts]
nexus-demo = "examples.healthcare_demo:run_demo"

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "W", "I", "N", "UP", "B"]

[tool.mypy]
python_version = "3.10"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=nexus --cov-report=term-missing"

[tool.setuptools.packages.find]
where = ["."]
include = ["nexus*"]
